Bug 413578 - null-arg checks in nsMsgAccountManager.cpp, nsMsgPurgeService.cpp, nsMsgIdentity.cpp, and nsImapIncomingServer.cpp (original patch from Joey Minta) r=bienvenu